2003-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* libgui/configure: Regen to account for
	--enable-symbols fix.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Set CC and CFLAGS when
	compiling with VC++.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Set the c preprocessor and
	executable extensions to work around problems
	that autoconf 2.13 has with VC++.

2003-02-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in:
	* configure: Regen to fix timestamp problem.
	* library/Makefile.in:
	* src/Makefile.in: Regen to account for changes
	since import from sources.

2002-12-03  Martin M. Hunt  <hunt@redhat.com>

	* library/pane.tcl: auto_mkindex cannot rebuild
	tclIndex because it does not recognize the namespace
	import in main.tcl.  To get it to work again, rename the
	following:
		body -> itcl::body
		configbody -> itcl::configbody
		class -> itcl::class
	* library/panedwindow.tcl: Ditto.

	* library/tclIndex: Regenerated.

	* library/pkgIndex.tcl: Regenerated.

2002-11-26  Martin M. Hunt  <hunt@redhat.com>

	* Makefile.in: Remove Tix references.
	* library/Makefile.in: Remove Tix references.
	* src/Makefile.in: Remove Tix references.

2002-09-20  Fernando Nasser  <fnasser@totem.toronto.redhat.com>

	* library/combobox.tcl (build): Add line missing from previous patch.

2002-09-20  Fernando Nasser  <fnasser@totem.toronto.redhat.com>

	* library/combobox.tcl (build): New variable to save grabs.
	(widgetProc): Save and restore previous grabs.

2002-07-03  Martin M. Hunt  <hunt@redhat.com>

	* library/panedwindow.tcl (_placePlanes): Make certain things 
	are initialized before attempting to move panes.

2002-06-07  Martin M. Hunt  <hunt@redhat.com>

	* src/tkTableTag.c (Table_TagCmd): Don't decrement past
	beginning of array.

	* library/combobox.tcl (::combobox::configure): Don't
	force background to white.

2002-03-07  Martin M. Hunt  <hunt@redhat.com>